Fix flex issues on Safari 9

--- a/app/component/summary/summary.scss
+++ b/app/component/summary/summary.scss
@@ -1,6 +1,5 @@
 .summary {
-    display: flex;
-    flex-direction: column;
+    flex: 1 0 0%;
     overflow-y: auto;
 }
 
